docs/historicos/lexico-sintactico/conflicto_ejecutable/lalr_conflicto.y
%{
#include <stdio.h>
%}

%token INT VOID ID

%%

Program
    : VariableDeclarations MethodDeclarations
    ;

VariableDeclarations
    : /* empty */
    | VariableDeclaration VariableDeclarations
    ;

VariableDeclaration
    : Type ID ';'
    ;

MethodDeclarations
    : /* empty */
    | MethodDeclaration MethodDeclarations
    ;

MethodDeclaration
    : Type ID '(' ')' Block
    | VOID ID '(' ')' Block
    ;

Type
    : INT
    ;

Block
    : '{' '}'
    ;

%%
